# secp256k1_ffi

./: README.md  ffigen.yaml  pubspec.yaml  test_on_pc.sh
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
grill_testing/: grill_benchmark.dart  grill_group.dart  grill_test.dart  grill_test_result.dart  grill_testing.dart  grill_widget.dart  humanize_time.dart
ios/: compile_secp256k1_ios.sh  secp256k1_ffi.podspec
ios/Classes/: Secp256k1FfiPlugin.swift
ios/Frameworks/secp256k1.xcframework/: Info.plist
lib/: old.x  secp256k1_ffi.dart
lib/constants/: constants.dart
lib/ecdh/: ecdh.dart
lib/ecdsa/: ecdsa.dart
lib/keys/: keys.dart  private_key.dart  public_key.dart
lib/schnorr/: schnorr.dart
lib/src/bindings/: bindings.dart
lib/src/encoding/: encoding.dart  hex.dart
lib/src/ffi_lib/: allocators.dart  arena_wrapper.dart  ffi_bindings.dart  ffi_lib.dart  safe_arena.dart
lib/src/logging/: logging.dart
lib/tagged_hash/: tagged_hash.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt
test/: helpers.dart  integration_test_entry.dart  parsing.dart
test/ecdh/: test_list.dart
test/ecdsa/: test_list.dart
test/ecdsa/tests/: roundtrip.dart  (+1 more)
test/make_test/: make_test_func.dart
test/schnorr/: test_list.dart
test/tagged_hash/: run_test.dart  test_list.dart
(+21 files in other folders)
